# find_duplicated_files

./: .black  .flake8  .gitignore  .pre-commit-config.yaml  README.md  docker-compose.yml  main.py  pyproject.toml  requirements-dev.txt  requirements.in  requirements.txt  rsync_drive.sh  setup.cfg
find_duplicated_files/: __init__.py  files_cleaners.py
find_duplicated_files/db_cache/: __init__.py  db_cache_manager.py
find_duplicated_files/io_files/: hash_functions.py  io_wrappers.py
src/: db_cache_manager.py  files_cleaners.py  hash_functions.py  io_wrappers.py
src/db_cache/: db_cache_manager.py
src/io_files/: hash_functions.py  io_wrappers.py
tests/: test_copy_recursive.py
