[build-system]
requires = ["flit_core >=3.2"]
build-backend = "flit_core.buildapi"


[project]
name = "find_duplicated_files"
authors = [
    {name = "fxfabre", email = "thomas@kluyver.me.uk"},
]
license = { text = "GPL" }
dynamic = ["version", "description"]
readme = "README.md"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
requires-python = ">=3.8"
dependencies = [
    "python-dotenv",
    "pandas>=2.0",
    "pathlib",
    "psycopg2-binary",
    "sqlalchemy"
]


[project.urls]
"Homepage" = "https://github.com/fxfabre/find_duplicated_files"
"Bug Tracker" = "https://github.com/fxfabre/find_duplicated_files/issues"


[project.optional-dependencies]
dev = [
    "pytest",
    "pip-tools",
    "jupyterlab",
    "pre-commit",
    "freezegun"
]

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "-ra -q"
testpaths = [
    "tests"
]

[tool.black]
line-length = 100
target-version = ['py311']
include = '\.pyi?$'
exclude = '''
/(
 \.git
 | \.hg
 | \.mypy_cache
 | \.tox
 | \.venv
 | _build
 | buck-out
 | build
 | dist
)/
'''


[tool.mypy]
python_version = "3.11"
check_untyped_defs = true

[tool.isort]
profile = "google"
line_length = 100
src_paths = ["isort", "test"]
