[metadata]
name = find_duplicated_files
url = https://github.com/fxfabre/find_duplicated_files
license = GPL
author = 
author_email = 
description = find duplicated files
long_description = file: README.md
classifiers =
    Development Status :: 3 - Alpha
    Intended Audience :: Developers
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8

[options]
python_requires = >=3.6
setup_requires = setuptools_scm
packages = find:
zip_safe = false
install_requires =
    python-dotenv
    pandas>=1.0
    pathlib
    psycopg2
    sqlalchemy

[options.packages.find]
exclude = tests

[options.extras_require]
testing =
    pytest

[bdist_wheel]
universal = 1

[flake8]
max-line-length = 120
exclude = build/*, dist/*, pip_tools.egg-info/*, piptools/_compat/*, .tox/*, .venv/*, .git/*, .eggs/*
ignore = E203, E231, E266, E501, W503, F403, E401, F401
max-complexity = 18
select = B,C,E,F,W,T4,B9

[isort]
force_single_line = True
line_length = 120
